# zoom_physio

./: .gitignore  LICENSE  README.md  pyproject.toml  todos.txt
multi_threaded_system/: agg.py  face_streamer.py
multi_threaded_system/utils/: pose_estimator.py
nbs/: Realtime_Vitals.ipynb  adam_mask_sandbox.ipynb  detect_facial_features.ipynb  face_streamer.ipynb  hrv_calculations.ipynb  pose_estimator.py  real-time_facial_landmarks.ipynb  track_and_plot_rgb.ipynb  track_and_plot_rgb_real-time.ipynb  track_faces.ipynb  train_face_pose_estimator_model.ipynb  useful_functions.ipynb  utils.ipynb
nbs/.ipynb_checkpoints/: detect_facial_features-checkpoint.ipynb  real-time_facial_landmarks-checkpoint.ipynb  utils-checkpoint.ipynb
nbs/models/: model.h5
src/: apply_aam.ipynb  detect_faces.ipynb  detect_facial_features.ipynb  face_streamer.py  pose_estimator.py  real-time_facial_landmarks.ipynb  track_and_plot_rgb.ipynb  track_and_plot_rgb_real-time.ipynb  useful_functions.ipynb
src/.ipynb_checkpoints/: real-time_facial_landmarks-checkpoint.ipynb  track_and_plot_rgb-checkpoint.ipynb  track_and_plot_rgb_real-time-checkpoint.ipynb
src/utils/: __init__.py
