[tool.poetry]
name = "zoom_physio"
version = "0.1.0"
description = "extract physiological signals over Zoom"
authors = ["Brandon Thai Tran <xbrandonthaitran@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.5"
numpy = "^1.19.4"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
