[tool.poetry]
name = "zoom_physio"
version = "0.1.0"
description = "extract physiological signals over Zoom"
authors = ["Brandon Thai Tran <xbrandonthaitran@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.5"
numpy = "^1.19.4"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
imutils = "^0.5.3"
scipy = "^1.5.4"
scikit-learn = "^0.23.2"
scikit-image = "^0.17.2"
cmake = "^3.18.4"
dlib = "^19.21.1"
opencv-python = "^4.4.0"
jupyterlab = "^2.2.9"
jupyterplot = "^0.0.3"
PyQt5 = "^5.15.2"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
